# tlg8

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  beam_search_runtime.py  multitask_model.py  train_multitask.py
analysis/: golomb_best.txt
cpp/: CMakeLists.txt  common.hpp  tlg8_featcache.cpp  tlg8_labelcache.cpp
docs/: ann_accuracy_strategy.md  ann_plan.md  ann_training_workflow.md  golomb_table_rebuild_review.md  multitask_runtime_guide.md
ml/: analyze_head_metrics.py  cpp_extractor_file_structure.md  dataset_builder.py  diagnose_consistency.py  distill_rankers_filteri.py  eval_rankers.py  fix_dump_alignment.py  infer_rankers.py  make_bits_sidecar.py  make_dataset.py  make_dataset.sh  pack_artifacts.py  pack_artifacts.sh  promote_bundle.py  run_tlgconv_dump.py  run_tlgconv_dump.sh  tlg_ml_utils.py  train.py  train_joint_filteri.py  train_rankers.py  train_rankers_filteri.py
src/: bmp_io.cpp  genbmp.cpp  image_io.h  label_record.h  main.cpp  png_io.cpp  sha256.cpp  sha256.h  tlg5_io.cpp  tlg5_io.h  tlg6_io.cpp  tlg6_io.h  tlg7_common.cpp  tlg7_common.h  tlg7_decoder.cpp  tlg7_encoder.cpp  tlg7_entropy_codec.cpp  tlg7_entropy_codec.h  tlg7_io.cpp  tlg7_io.h  tlg8_bit_io.h  tlg8_block.h  tlg8_block_side_info.h  tlg8_color_filter.cpp  tlg8_color_filter.h  tlg8_decode.cpp  tlg8_encode.cpp  tlg8_entropy.cpp  tlg8_entropy.h  tlg8_interleave.cpp  tlg8_interleave.h  tlg8_io.cpp  tlg8_io.h  tlg8_predictors.cpp  tlg8_predictors.h  tlg8_reorder.cpp  tlg8_reorder.h  tlg8_varint.h  tlg_io.cpp  tlg_io_common.cpp  (+1 more)
test/: run_roundtrip.py  test_fastpath_parity.py  test_multitask_runtime.py  test_tlg8_training_cli.py
tools/: beam_search_runtime.py  features.py  gpu_stress.py  io_utils.py  losses.py  make_feature_stats.py  make_k_tables_rakm.py  multitask_model.py  pack_workdir.sh  parallel_tlgconv.py  pgo_build.sh  preextract_labels.py  run_top5_finalists.sh  sweep_reorder.py  train_multitask.py  train_tlg8_ann.py  tune_golomb.py  vs_histo.py
utils/: perm_candidates.py
